--- a/old/css/style.css
+++ b/old/css/style.css
@@ -25,7 +25,7 @@ nav{
           position: fixed;
 }
 
-nav img{
+nav div.image{
           margin-top: 1vh;
           margin-left: 5%;
           height: 110%;
